--- a/helm/backend/values.yaml
+++ b/helm/backend/values.yaml
@@ -1,6 +1,6 @@
 replicaCount: 1
 image:
-  repository: your-dockerhub/backend
+  repository: kazitamim757/backend
   tag: latest
   pullPolicy: IfNotPresent
 service:
