--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: microapp.local
+    - host: localhost
       http:
         paths:
           - path: /
