--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,23 @@
-# Stage 1: Build the React application
-FROM node:16 AS build
+FROM node:16 as build
+
 WORKDIR /app
 
-# Copy package.json and package-lock.json (if present) for caching purposes
+# Copy the package.json and package-lock.json first to leverage Docker cache
 COPY package*.json ./
 
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application files and build the app
+# Copy the rest of the application files
 COPY . .
+
+# Build the app
 RUN npm run build
 
-# Stage 2: Set up Nginx to serve the built application
 FROM nginx:alpine
 
-# Copy custom nginx config (if needed)
+# Copy Nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy built application to Nginx’s public directory
+# Copy the build output from the build stage to Nginx
 COPY --from=build /app/build /usr/share/nginx/html
-
-# Expose the port Nginx is listening on
-EXPOSE 80
-
-# Start Nginx server
-CMD ["nginx", "-g", "daemon off;"]
