--- a/helm/postgres/templates/deployment.yaml
+++ b/helm/postgres/templates/deployment.yaml
@@ -14,16 +14,19 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: postgres:15
           env:
+            - name: POSTGRES_DB
+              value: "microapp"
+            - name: POSTGRES_USER
+              value: "myuser"
             - name: POSTGRES_PASSWORD
-              value: example
+              value: "mypassword"
           ports:
             - containerPort: 5432
           volumeMounts:
-            - name: postgres-init
-              mountPath: /docker-entrypoint-initdb.d
+            - name: postgres-storage
+              mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgres-init
-          configMap:
-            name: postgres-initdb
+        - name: postgres-storage
+          emptyDir: {}
