--- a/helm/postgres/templates/service.yaml
+++ b/helm/postgres/templates/service.yaml
@@ -3,8 +3,10 @@ kind: Service
 metadata:
   name: postgres
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
   selector:
     app: postgres
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
+  type: ClusterIP
